Updated Debian package creation with user and group.

--- a/Debian/lfsm-database-proxy/debian/changelog
+++ b/Debian/lfsm-database-proxy/debian/changelog
@@ -1,6 +1,5 @@
-lfsm-database-proxy (1.1) jessie-testing; urgency=medium
+lfsm-database-proxy (1.2) jessie-testing; urgency=medium
 
-  * Replaced OSS IP with OSS name.
-  * Added Debian package build.
+  * Using user and group permittion for systemd unit on deployment.
 
  -- Gabriele Iannetti <g.iannetti@gsi.de>  Wed, 24 Jan 2018 15:58:40 +0200
