update changelog for deb packages

--- a/Debian/lfsm-database-proxy/debian/changelog
+++ b/Debian/lfsm-database-proxy/debian/changelog
@@ -1,5 +1,5 @@
-lfsm-database-proxy (1.2) jessie-testing; urgency=medium
+lfsm-database-proxy (1.3) jessie-testing; urgency=medium
 
-  * Using user and group permittion for systemd unit on deployment.
+  * Added creation of /var/run/lfsm/ directory in SystemD unit before service execution.
 
  -- Gabriele Iannetti <g.iannetti@gsi.de>  Wed, 24 Jan 2018 15:58:40 +0200
